[package]
name = "rust_task"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"
borsh = "0.10.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }

[[bin]]
name = "airdrop"
path = "src/airdrop.rs"

[[bin]]
name= "transfer"
path = "src/transfer.rs"

[[bin]]
name = "empty_transfer"
path = "src/empty_transfer.rs"

[[bin]]
name = "enroll"
path = "src/enroll.rs"